# engine

./: .gitignore  .gitmodules  CMakeLists.txt  engine_setup.txt  example.lua  main.cpp
applications/: CMakeLists.txt
applications/cookbook/Chapter_1/: CB_Chapter1_app.cpp  CB_Chapter1_app.h  CB_Chapter1_blob_app.cpp  CB_Chapter1_blob_app.h
applications/cookbook/Chapter_2/: ADSShadingApp.cpp  ADSShadingApp.h  DiffuseShadingApp.cpp  DiffuseShadingApp.h  DiscardShadingApp.cpp  DiscardShadingApp.h  FlatADSShadingApp.cpp  FlatADSShadingApp.h  SubroutineApp.cpp  SubroutineApp.h  TwoSideShadingApp.cpp  TwoSideShadingApp.h
gem/: CMakeLists.txt
gem/src/gem/: quaternion.h  vector.h  vector2.h  vector3.h  vector4.h  vector_base.h
gem/src/swig/: angle.i  constants.i  gem.i  gem_wrap.cxx  matrix.i  vector.i  vector2.i  vector3.i  vector4.i  vector_base.i  vector_iterator.i
src/: CMakeLists.txt  application.cpp  application.h  component.cpp  component.h  engine.cpp  engine.h  entity.cpp  entity.h  glfw_input_processor.cpp  glfw_input_processor.h  input_processor.cpp  input_processor.h  lua_application.cpp  lua_application.h  lua_component.cpp  lua_component.h
src/applications/cookbook/: CB_Chapter1_app.cpp  CB_Chapter1_app.h  CB_Chapter1_blob_app.h
src/applications/cookbook/Chapter_1/: CB_Chapter1_app.cpp  CB_Chapter1_app.h  CB_Chapter1_blob_app.cpp  CB_Chapter1_blob_app.h
src/applications/cookbook/Chapter_2/: ADSShadingApp.cpp  ADSShadingApp.h  DiffuseShadingApp.cpp  DiffuseShadingApp.h  DiscardShadingApp.cpp  DiscardShadingApp.h  FlatADSShadingApp.cpp  FlatADSShadingApp.h  SubroutineApp.cpp  SubroutineApp.h  TwoSideShadingApp.cpp  TwoSideShadingApp.h
src/applications/logl/: learn_opengl_application.cpp  learn_opengl_application.h
src/applications/logl-lighting/: lighting_app.cpp  lighting_app.h
src/applications/model_loading/: ModelLoadingApp.cpp  ModelLoadingApp.h
src/components/: camera_component.cpp  camera_component.h
src/gem/: matrix.h  matrix4.h  vector3.h
src/rendering/: glfw_window.cpp  glfw_window.h  glsl_exception.cpp  glsl_exception.h  glsl_program.cpp  glsl_program.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  stb_image_implementation.cpp  texture.cpp  texture.h  window.cpp  window.h
src/rendering/lights/: attenuation.cpp  attenuation.h  directional_light.cpp  directional_light.h  light.cpp  light.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
src/rendering/material/: material.cpp  material.h
src/rendering/mesh/: mesh.h  triangle_mesh.cpp  triangle_mesh.h
src/rendering/mesh/examples/: teapot.cpp  teapot.h  torus.cpp  torus.h
src/scripting/: lua.cpp  lua.h  lua_exception.cpp  lua_exception.h
src/shaders/cookbook/: ads.vert.glsl  adsflat.frag.glsl  adsflat.vert.glsl  adstwosided.vert.glsl  basic.frag.glsl  basic.vert.glsl  blob.frag.glsl  blob.vert.glsl  diffuse.frag.glsl  diffuse.vert.glsl  discard.frag.glsl  discard.vert.glsl  subroutine.frag.glsl  subroutine.vert.glsl
src/shaders/learnopengl_lighting_shaders/: colours.fs.glsl  colours.vs.glsl  light_cube.fs.glsl
src/shaders/learnopengl_shaders/: shader.fs.glsl  shader.vs.glsl
src/swig/: application.i  engine.i  swig.i
src/swig/rendering/: glfw_window.i  window.i
swig/: CMakeLists.txt  application.i  component.i  engine.i  entity.i  glfw_input_processor.i  input_processor.i  lua_application.i  lua_component.i  swig.i  utils.cpp  utils.h
swig-files/: angle.i  constants.i  gem.i  matrix.i  vector.i  vector2.i  vector3.i  vector4.i  vector_base.i  vector_iterator.i
swig/components/: camera_component.i
swig/rendering/: glfw_window.i  window.i
tests/: CMakeLists.txt  main.cpp
tests/gem/: angle_test.cpp  constants_test.cpp  matrix_test.cpp  quaternion_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp  vector_base_test.cpp  vector_iterator_test.cpp  vector_test.h.cpp
tests/src/: application_test.cpp  component_test.cpp  engine_test.cpp  entity_test.cpp  glfw_input_processor_test.cpp
tests/src/components/: camera_component_test.cpp
tests/src/gem/: matrix4_test.cpp  vector2_test.cpp  vector3_test.cpp  vector4_test.cpp
tests/src/rendering/: glfw_window_test.cpp  glsl_program_test.cpp
tests/src/scripting/: lua_exception_test.cpp  lua_test.cpp
